Version 1.53:
	- Added primality proving of factors found (thanks David Cleaver /
		Brian Gladman)
	- Added a primality test for factors of NFS relations; apparently
		the sieving tools will occasionally output relations with 
		factors that are composite, and this may be the cause of
		mysterious problems with extremely large jobs
	- Added an old fix for potential memory corruption doing NFS filtering
		with extremely large datasets, since the patch actually
		saved a factorization from failing (thanks Greg Childers)
	- Fixed a bug in factor base generation that stopped NFS line sieving
		from working (thanks DDEM)
	- Fixed more problems with >4GB files in windows (thanks Nooby)
	- Simplify the inner loop of the QS hashtable sieving code;
		modern processors run QS noticeably faster now
		(thanks Mick Francis)
	- Added a slight speedup for NFS relation parsing (thanks Lionel Debroux)

Version 1.52: 2/4/14
	- Added a major overhaul of the liner algebra; this uses the
		thread pool with tighter coordination between threads
		and much-reduced memory use. On a fast modern processor 
		with big caches the new code is 30% faster, and the speedup 
		increases with more threads
	- Added the ability to start the NFS linear algebra after using
		the CADO-NFS suite for filtering (thanks Paul Zimmermann)
	- Fixed a bug in the MPI code that makes Nx1 and 1xN grids work again
	- Fixed 32-bit overflow problems in the NFS square root (thanks Greg 
		Childers)
	- Fixed problems parsing arguments in the NFS square root (thanks
		Carlos Pinho / Lionel Debroux)
	- Fixed a typo in the threadpool that caused races when shutting down
	- Turned off asm in QS when compiling debug builds
	- Fixed a buffer overflow parsing large inputs (thanks Ryan Propper)
	- Fixed Windows CPU time measurement (thanks Roman Rusakov)
	- Modified makefiles to account for environment vars in CUDA 5.5


Version 1.51: 2/17/13
	- Performed another massive overhaul of the GPU polynomial selection